# 51-ACA

./: .env.example  .env.test  .gitignore  01-feasibility.md  02-preflight.md  03-aca-documentation.md  04-security.md  05-technical.md  07-react.md  08-payment.md  09-hardening-MVP.md  10-recurrent-clients.md  12-IaCscript.md  13-IAC-more.md  14-analytcs.md  15-frontend.md  19-apim-cache.md  20-iac-resources.md  21-managing-buz.md  22-spark-frontend.md  23-spark-prompt.md  ACCEPTANCE.md  AGENT-AUDIT-PLAN.md  AGENTS.md  ALIGNMENT-COMPLETION-20260305.md  AUDIT-ALIGNMENT-20260305.md  AUTOMATION-INFRASTRUCTURE-INVENTORY.md  BILLION-DOLLAR-PLAN.md  BOOTSTRAP-20260305.md  CHANGELOG.md  CLOUD-AGENT-HANDOFF.md  DATA-INTEGRITY-FIX-EXECUTIVE-SUMMARY-20260303.md  DATA-MODEL-SPLIT-ANALYSIS-20260305.md  DATA-QUALITY-FORENSICS-20260303.md  DATA-QUALITY-REMEDIATION-SUMMARY.md  DATA-QUALITY-SUMMARY.md  DATA-RECOVERY-SESSION31-PLAN.md  DATA-REGENERATION-VERIFICATION-20260303.md  DAY-2-COMPLETE.md  DAY-4-COMPLETE.md  (+102 more)
.devcontainer/: devcontainer.json  on-create.sh
.eva/: ado-id-map.json  badge.json  cloud-export.json  discovery.json  export-to-model-evidence.json  fractal-dpdca-20260315-022618.json  fractal-dpdca-20260315-025249.json  model-export.json  nested-dpdca-metadata-discovery.json  nested-dpdca-metadata-update.json  prime-evidence.json  reconciliation.json  session31-harvest-ado.json  session31-harvest-evidence.json  session31-harvest-wbs.json  session31-reconciliation.json  session31-verification-report.json  session31-verification-report.md  trust-history.json  trust.json  (+7 more)
(+989 files in other folders)
