[tool.pytest.ini_options]
testpaths = ["services"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "B", "C4", "T20"]
ignore = ["E501"]
exclude = ["infra/", "frontend/", ".venv/"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
exclude = ["infra/", "frontend/"]

[tool.coverage.run]
source = ["services"]
omit = ["*/tests/*", "*/__init__.py"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
