[tool.pytest.ini_options]
testpaths = ["services"]
addopts = "-v --tb=short"
pythonpath = [".", "services/api"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "B", "C4", "T20"]
ignore = ["E501"]
exclude = ["infra/", "frontend/", ".venv/"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
exclude = ["infra/", "frontend/"]

[tool.coverage.run]
source = ["services"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.coverage.paths]
source = [
    "services/analysis/app/rules",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
